--- a/_config.yml
+++ b/_config.yml
@@ -23,10 +23,10 @@ repository               : "whancock6.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "dragon.png"
+  avatar           : "sds-seal.png"
   name             : "The Saint David's Society of Savannah"
   pronouns         : # example: "she/her"  
-  bio              : "Welsh Heritage Society"
+  bio              : "Celebrating Welsh Heritage since 2013"
   location         : "Savannah, Georgia"
   employer         : #"Red Brick University"
   uri              : # URL
