--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,13 +15,16 @@ main:
     url: /members/    
 
   - title: "Officers"
-    url: /portfolio/
+    url: /officers/
     
   - title: "Gallery"
-    url: /teaching/    
+    url: /gallery/    
             
+  - title: "Bard's Chair"
+    url: /poetry/
+  
   - title: "Blog"
-    url: /year-archive/
+    url: /blog/
     
  # - title: "CV"
   #  url: /cv/
