--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,12 +4,10 @@
 # links. Removing a link prevents it from showing in the header, but does not
 # prevent it from being included in the site.
 #
-# NOTE that only one of the CV options should be selected, the first is for the
-#      Markdown formatted page while the second is generated using JSON.
 
 main:
-  - title: "Heritage"
-    url: /heritage/
+  - title: "Learn"
+    url: /learn/
 
   - title: "Members"
     url: /members/    
@@ -25,12 +23,4 @@ main:
   
   - title: "Blog"
     url: /blog/
-    
- # - title: "CV"
-  #  url: /cv/
-    
-  # - title: "CV"
-  #   url: /cv-json/
-    
- # - title: "Guide"
-  #  url: /markdown/
+  
